Fix CSS for One-Click Postage reblog tick
Fixes the CSS for One-Click Postage reblog tick. Previously using a
white background and doesn't look good with Tumblr Labs - Themed Posts
enabled.

--- a/Extensions/one_click_postage.css
+++ b/Extensions/one_click_postage.css
@@ -11,6 +11,15 @@
     line-height: 10px;
 }
 
+.theme_posts_experiment .post, .post:not(.new_post_buttons) * {
+	background-color: inherit;
+}
+
+.themed_posts_experiment .post_wrapper .post_footer .post_controls .post_control.reblog.reblogged:after {
+	color: inherit;
+	background: inherit;
+}
+
 #x1cpostage_quick_tags {
 	max-height: 70px;
 	overflow-y: auto;
